# RPO

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_docker.sh  run_docker.sh
assets/: params.yaml
assets/models/: lab_color.ot  lamp_model.csv  office_color.ot
experiments/test/: params.txt
experiments/test/models/: infirmary_color.ot  lamp_model.csv
include/: augmented_octree.h  dose_calculator.h  parameters.h  plan_generator.h  ros_visualizer.h
launch/: rviz.launch
models/: colors.txt
models/base/: cafe_color.ot  infirmary_color_mod.ot
models/height/: K408_height.ot  K408_height_mod.ot  cafe_height_g.ot  infirmary_height_mod_g.ot  office_height_g.ot
rviz/: hospital.rviz  office.rviz  office_new.rviz
src/: augmented_octree.cpp  dose_calculator.cpp  experiment.cpp  floor_plan.cpp  ground_zone.cpp  known_plan.cpp  main.cpp  parameters.cpp  ros_visualizer.cpp
test/: augmentation_test.cpp  binary_save.cpp  height_color.cpp  octomap_converter.cpp  parameter_test.cpp  test_params.txt
workspace/src/: CMakeLists.txt
workspace/src/dev/: compare_models.cpp  floor_plan.cpp  ray_tracing_3d.cpp
workspace/src/include/: dose_calculator.h
workspace/src/launch/: rpo.launch
workspace/src/models/height/: K408_height_mod_g.ot  cafe_height_mod.ot  infirmary_height_mod_red.ot  office_height.ot  office_height_mod.ot
workspace/src/rpo/: CMakeLists.txt  package.xml
workspace/src/rpo/dev/include/: parameters.h
workspace/src/rpo/dev/launch/: floor_plan.launch  rpo.launch  rt3.launch  rtt.launch
workspace/src/rpo/dev/src/: binary_save.cpp  compare_models.cpp  dda_ray_tracing_cpu.cpp  dda_ray_tracing_gpu.cu  experiment.cpp  floor_plan.cpp  parameters.cpp  path_planning.cpp  ply2octomap.cpp  ray_tracing_3d.cpp  ray_tracing_test.cpp  split_model.cpp  test.cpp
workspace/src/rpo/include/: augmented_octree.h  dose_calculator.h  extended_octree.h  gpu_ray_tracing.cuh  parameters.h  plan_generator.h  ros_visualizer.h
workspace/src/rpo/launch/: ceiling.launch  split.launch
workspace/src/rpo/models/: test_room.csv
workspace/src/rpo/models/augmented/: K408_augmented.ot
workspace/src/rpo/models/base/: K408_color.ot
workspace/src/rpo/models/height/: cafe_height.ot  infirmary_height_mod.ot
workspace/src/rpo/rviz/: cafe.rviz  cafe_fp.rviz  floor_plan.rviz  k408.rviz
workspace/src/rpo/scripts/: gpu_test.py  run_concorde.py  run_gurobi.py  run_lkh.py  run_lp.py  stats.py  visualizer.py
workspace/src/rpo/src/: augmented_octree.cpp  ceiling_lamp.cpp  compute_maps.cpp  dose_calculator.cpp  extended_octree.cpp  gpu_ray_tracing.cu  main.cpp  octree_bindings.cpp  parameters.cpp  plan_generator.cpp  ros_visualizer.cpp  vertical.cpp
workspace/src/rpo/test/: augmentation_test.cpp  extension_test.cpp  known_plan.cpp  parameter_test.cpp  test_params.txt
workspace/src/rviz/: hospital_new.rviz
workspace/src/src/: augmented_octree.cpp  plan_generator.cpp
workspace/src/test/: augmentation_test.cpp
